tests/ui/wf/wf-in-fn-type-implicit.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/wf-in-fn-type-implicit.rs:27:26
   |
LL |     let val = extend_lt(&String::from("blah blah blah"));
   |               -----------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-- temporary value is freed at the end of this statement
   |               |          |
   |               |          creates a temporary value which is freed while still in use
   |               argument requires that borrow lasts for `'static`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
